# LLM-Modules

./: LICENSE  README.md  pyproject.toml
src/llm_modules/: __init__.py  gemini_agent.py
src/llm_modules/tools/: ddg_search.py
